# STS-SaveEditor

./: .gitignore  CMakeLists.txt  README.md
example/: THE_SILENT.autosave  THE_SILENT.json
src/: CMakeLists.txt  cli_main.cpp  codec.cpp  codec.h  gui_main.cpp  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/cli/: main.cpp
src/gui/: CMakeLists.txt  README.md  gui_main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
web/: app.js  index.html  style.css
web/lib/: search.js
